--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
-<hr
-<p> clase2</p>
-<hr>
-<h1> lista </h1>
-<h2> probando repositorio</h2>
-<ul>
-    <li>primerra sinbcronizzacion</li>
-    <li>segunda lista de sincronizacion</li>
-    <li> tercera sincronizacion</li>
-</ul>
+<html>
+<head>
+ <title>Mi primer proyecto HTML</title>
+</head>
+<body>
+ <h1>Hola, mi nombre es….!</h1>
+</body>
 </html>
