--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
  <title>Mi primer proyecto HTML</title>
 </head>
 <body>
- <h1>Hola, mi nombre es GUIZADA SERGIO IVAN !</h1>
- <hr>
+ <h1>Hola, mi nombre es GUIZADA SERGIO IVAN….!</h1>
 </body>
 </html>
